# backend/controllers/orderController.js
@@ -2,8 +2,9 @@
 
 //This file is responsible for storing , updating, etc orders in the database
 
-import asyncHandler from 'express-async-handler'
-import Order from '../models/orderModel.js'
+import asyncHandler from "express-async-handler";
+import Order from "../models/orderModel.js";
+
 
 // @desc    Create new order
 // @route   POST /api/orders
@@ -17,12 +18,12 @@ const addOrderItems = asyncHandler(async (req, res) => {
     taxPrice,
     shippingPrice,
     totalPrice,
-  } = req.body
+  } = req.body;
 
   if (orderItems && orderItems.length === 0) {
-    res.status(400)
-    throw new Error('No order items')
-    return
+    res.status(400);
+    throw new Error("No order items");
+    return;
   } else {
     const order = new Order({
       orderItems,
@@ -33,90 +34,101 @@ const addOrderItems = asyncHandler(async (req, res) => {
       taxPrice,
       shippingPrice,
       totalPrice,
-    })
+    });
 
-    const createdOrder = await order.save()
+    const createdOrder = await order.save();
 
-    res.status(201).json(createdOrder)
+    res.status(201).json(createdOrder);
   }
-})
+});
 
 // @desc    Get order by ID
 // @route   GET /api/orders/:id
 // @access  Private
 const getOrderById = asyncHandler(async (req, res) => {
   const order = await Order.findById(req.params.id).populate(
-    'user',
-    'name email'
-  )
+    "user",
+    "name email"
+  );
 
   if (order) {
-    res.json(order)
+    res.json(order);
   } else {
-    res.status(404)
-    throw new Error('Order not found')
+    res.status(404);
+    throw new Error("Order not found");
   }
-})
+});
 
 // @desc    Update order to paid
 // @route   GET /api/orders/:id/pay
 // @access  Private
 const updateOrderToPaid = asyncHandler(async (req, res) => {
-  const order = await Order.findById(req.params.id)
+  const order = await Order.findById(req.params.id);
+  console.log("incoming body", req.body);
+  console.log("previous order", order);
+  try {
+    if (order) {
+      order.isPaid = true;
+      order.paidAt = Date.now();
+      order.paymentResult = {
+        id: req.body.id,
+        status: req.body.status,
+        update_time: Date.now(),
+        email_address: req.body.payer.email_address,
+      };
 
-  if (order) {
-    order.isPaid = true
-    order.paidAt = Date.now()
-    order.paymentResult = {
-      id: req.body.id,
-      status: req.body.status,
-      update_time: req.body.update_time,
-      email_address: req.body.payer.email_address,
+      const updatedOrder = await order.save();
+      console.log("updated order", updatedOrder);
+      res.json(updatedOrder);
+    } else {
+      res.status(404);
+      throw new Error("Order not found");
     }
-
-    const updatedOrder = await order.save()
-
-    res.json(updatedOrder)
-  } else {
-    res.status(404)
-    throw new Error('Order not found')
+  } catch (err) {
+    console.log(err);
   }
-})
+});
 
 // @desc    Update order to delivered
 // @route   GET /api/orders/:id/deliver
 // @access  Private/Admin
 const updateOrderToDelivered = asyncHandler(async (req, res) => {
-  const order = await Order.findById(req.params.id)
+  const order = await Order.findById(req.params.id);
 
   if (order) {
-    order.isDelivered = true
-    order.deliveredAt = Date.now()
+    order.isDelivered = true;
+    order.deliveredAt = Date.now();
 
-    const updatedOrder = await order.save()
+    const updatedOrder = await order.save();
 
-    res.json(updatedOrder)
+    res.json(updatedOrder);
   } else {
-    res.status(404)
-    throw new Error('Order not found')
+    res.status(404);
+    throw new Error("Order not found");
   }
-})
+});
 
 // @desc    Get logged in user orders
 // @route   GET /api/orders/myorders
 // @access  Private
 const getMyOrders = asyncHandler(async (req, res) => {
-  const orders = await Order.find({ user: req.user._id })
-  res.json(orders)
-})
+  try {
+    console.log(req.user.id);
+    const orders = await Order.find({ user: req.user.id });
+    res.json(orders);
+  } catch (error) {
+    console.log(error);
+    res.json({ err: error.message });
+  }
+});
 
 // @desc    Get all orders
 // @route   GET /api/orders
 // @access  Private/Admin
 const getOrders = asyncHandler(async (req, res) => {
-  const orders = await Order.find({}).populate('user', 'id name')
-  res.json(orders)
-})
+  const orders = await Order.find({}).populate("user", "id name");
+  res.json(orders);
+});
 
 export {
   addOrderItems,
@@ -125,4 +137,4 @@ export {
   updateOrderToDelivered,
   getMyOrders,
   getOrders,
-}
+};
